--- a/.classpath
+++ b/.classpath
@@ -43,7 +43,7 @@
 	<classpathentry kind="lib" path="lib/jfreechart/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/jfreechart/jcommon-1.0.22.jar"/>
 	<classpathentry kind="lib" path="lib/jfreechart/jfreechart-1.0.18-experimental.jar"/>
-	<classpathentry kind="lib" path="lib/jfreechart/jfreechart-1.0.18.jar" sourcepath="/JFreeChart source"/>
+	<classpathentry kind="lib" path="lib/jfreechart/jfreechart-1.0.18.jar" sourcepath="/jfreechart/src"/>
 	<classpathentry kind="lib" path="lib/jfreechart/jfreesvg-1.9.jar"/>
 	<classpathentry kind="lib" path="lib/jfreechart/junit-4.11.jar"/>
 	<classpathentry kind="lib" path="lib/jfreechart/orsoncharts-1.4-eval-nofx.jar"/>
