--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.rs.lamsi</groupId>
 	<artifactId>MassImager</artifactId>
-	<version>3.14b</version>
+	<version>3.21b</version>
 	<build>
 		<resources>
 			<resource>
@@ -77,6 +77,21 @@
 
 
 	<dependencies>
+<!-- https://mvnrepository.com/artifact/org.freehep/freehep-graphicsio-emf -->
+<dependency>
+    <groupId>org.freehep</groupId>
+    <artifactId>freehep-graphicsio-emf</artifactId>
+    <version>2.4</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.freehep/freehep-graphicsio -->
+<dependency>
+    <groupId>org.freehep</groupId>
+    <artifactId>freehep-graphicsio</artifactId>
+    <version>2.4</version>
+</dependency>
+
+	
 		<!-- START EXCEL -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
