--- a/pom.xml
+++ b/pom.xml
@@ -14,15 +14,15 @@
 			</resource>
 		</resources>
 		<plugins>
-		<plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-eclipse-plugin</artifactId>
-        <version>2.10</version>
-        <configuration>
-          <downloadSources>true</downloadSources>
-          <downloadJavadocs>true</downloadJavadocs>
-        </configuration>
-      </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<version>2.10</version>
+				<configuration>
+					<downloadSources>true</downloadSources>
+					<downloadJavadocs>true</downloadJavadocs>
+				</configuration>
+			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
@@ -38,7 +38,7 @@
 					<archive>
 						<manifest>
 							<mainClass>net.rs.lamsi.massimager.Frames.Window</mainClass>
-							<!-- <mainClass>net.rs.lamsi.massimager.mzmine.test.TestMZMinePeakListWindow</mainClass>-->
+							<!-- <mainClass>net.rs.lamsi.massimager.mzmine.test.TestMZMinePeakListWindow</mainClass> -->
 							<addClasspath>true</addClasspath>
 							<classpathPrefix>lib/</classpathPrefix>
 						</manifest>
@@ -81,26 +81,34 @@
 			<id>Expasy MzJava</id>
 			<url>http://mzjava.expasy.org/maven</url>
 		</repository>
-		
+
 	</repositories>
 
 
 	<dependencies>
-<!-- https://mvnrepository.com/artifact/org.freehep/freehep-graphicsio-emf -->
-<dependency>
-    <groupId>org.freehep</groupId>
-    <artifactId>freehep-graphicsio-emf</artifactId>
-    <version>2.4</version>
-</dependency>
+		<!-- https://mvnrepository.com/artifact/org.freehep/freehep-graphicsio-emf -->
+		<dependency>
+			<groupId>org.freehep</groupId>
+			<artifactId>freehep-graphicsio-emf</artifactId>
+			<version>2.4</version>
+		</dependency>
 
-<!-- https://mvnrepository.com/artifact/org.freehep/freehep-graphicsio -->
-<dependency>
-    <groupId>org.freehep</groupId>
-    <artifactId>freehep-graphicsio</artifactId>
-    <version>2.4</version>
-</dependency>
+		<!-- https://mvnrepository.com/artifact/org.freehep/freehep-graphicsio -->
+		<dependency>
+			<groupId>org.freehep</groupId>
+			<artifactId>freehep-graphicsio</artifactId>
+			<version>2.4</version>
+		</dependency>
 
-	
+		<!-- moved jimzML to private repository -->
+		<dependency>
+			<groupId>io.github.mzmine</groupId>
+			<artifactId>mzmine</artifactId>
+			<version>2.21</version>
+			<scope>compile</scope>
+		</dependency>
+
+
 		<!-- START EXCEL -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
@@ -133,137 +141,133 @@
 		</dependency>
 
 		<!-- INCLUDE MZJava for mzXML Import -->
-		<!-- To include the proteomic module
-		<dependency>
-			<groupId>org.expasy.mzjava</groupId>
-			<artifactId>mzjava-proteomics</artifactId>
-			<version>1.0.0</version>
-		</dependency> 
-		<dependency>
-			<groupId>org.expasy.mzjava</groupId>
-			<artifactId>mzjava-glycomics</artifactId>
-			<version>1.0.0</version>
-		</dependency> 
-		-->
-		
+		<!-- To include the proteomic module <dependency> <groupId>org.expasy.mzjava</groupId> 
+			<artifactId>mzjava-proteomics</artifactId> <version>1.0.0</version> </dependency> 
+			<dependency> <groupId>org.expasy.mzjava</groupId> <artifactId>mzjava-glycomics</artifactId> 
+			<version>1.0.0</version> </dependency> -->
+
 		<!-- MZMine 2 from local -->
-		
+
 		<!-- Export pdf -->
 		<dependency>
 			<groupId>com.itextpdf</groupId>
 			<artifactId>itextpdf</artifactId>
 			<version>5.5.6</version>
 		</dependency>
-		
-		<!-- Export eps svg  batik -->
+
+		<!-- Export eps svg batik -->
 		<dependency>
 			<groupId>org.apache.xmlgraphics</groupId>
 			<artifactId>batik-util</artifactId>
 			<version>1.8</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.xmlgraphics</groupId>
 			<artifactId>xmlgraphics-commons</artifactId>
 			<version>2.0</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.xmlgraphics</groupId>
 			<artifactId>batik-transcoder</artifactId>
 			<version>1.8</version>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>org.apache.xmlgraphics</groupId>
 			<artifactId>batik-awt-util</artifactId>
 			<version>1.8</version>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>org.apache.xmlgraphics</groupId>
 			<artifactId>batik-dom</artifactId>
 			<version>1.8</version>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>org.apache.xmlgraphics</groupId>
 			<artifactId>batik-svggen</artifactId>
 			<version>1.8</version>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>org.apache.xmlgraphics</groupId>
 			<artifactId>batik-svg-dom</artifactId>
 			<version>1.8</version>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>org.apache.xmlgraphics</groupId>
 			<artifactId>batik-anim</artifactId>
 			<version>1.8</version>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>org.apache.xmlgraphics</groupId>
 			<artifactId>batik-rasterizer</artifactId>
 			<version>1.8</version>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>org.apache.xmlgraphics</groupId>
 			<artifactId>batik-swing</artifactId>
 			<version>1.8</version>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>org.apache.xmlgraphics</groupId>
 			<artifactId>batik-gui-util</artifactId>
 			<version>1.8</version>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>org.apache.xmlgraphics</groupId>
 			<artifactId>batik-ttf2svg</artifactId>
 			<version>1.8</version>
-		</dependency> 
-		
+		</dependency>
+
 		<dependency>
 			<groupId>org.apache.xmlgraphics</groupId>
 			<artifactId>batik-parser</artifactId>
 			<version>1.8</version>
 		</dependency>
-		
-				
+
+
 		<dependency>
 			<groupId>net.sf.epsgraphics</groupId>
 			<artifactId>epsgraphics</artifactId>
 			<version>1.2</version>
-		</dependency> 
-		
+		</dependency>
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-math3</artifactId>
 			<version>3.5</version>
 		</dependency>
-		
+
 		<!-- zipping -->
-  	<dependency>
-  		<groupId>net.lingala.zip4j</groupId>
-  		<artifactId>zip4j</artifactId>
-  		<version>1.3.2</version>
-  	</dependency>
-		
+		<dependency>
+			<groupId>net.lingala.zip4j</groupId>
+			<artifactId>zip4j</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+
 		<!-- charset detection -->
 		<dependency>
-    		<groupId>com.github.albfernandez</groupId>
-    		<artifactId>juniversalchardet</artifactId>
-    		<version>2.0.0</version>
+			<groupId>com.github.albfernandez</groupId>
+			<artifactId>juniversalchardet</artifactId>
+			<version>2.0.0</version>
 		</dependency>
+		
+		
+		<!-- old local mzmine 
 		<dependency>
 			<groupId>net.sf.mzmine</groupId>
 			<artifactId>MZmine</artifactId>
 			<version>2.13</version>
 		</dependency>
+		-->
 	</dependencies>
 </project>
