--- a/buildNumber.properties
+++ b/buildNumber.properties
@@ -1,3 +1,3 @@
 #maven.buildNumber.plugin properties file
-#Fri Mar 09 19:51:25 CET 2018
-buildNumber=8
+#Wed Apr 25 15:51:28 CEST 2018
+buildNumber=9
