--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,23 @@
 
 
 	<dependencies>
+		<!-- Logging -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.5</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>apache-log4j-extras</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+	
 		<!-- https://mvnrepository.com/artifact/org.freehep/freehep-graphicsio-emf -->
 		<dependency>
 			<groupId>org.freehep</groupId>
