--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -6,15 +6,13 @@ log4j.appender.console=org.apache.log4j.ConsoleAppender
 
 # A1 uses PatternLayout.
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%-4r [%t] %-5p %c %x: %L - %m%n
+log4j.appender.console.layout.ConversionPattern=%d [%t] %-5p %c %x: %L - %m%n
 
 # log to file
 log4j.appender.FILE=org.apache.log4j.RollingFileAppender
-log4j.appender.FILE.rollingPolicy=org.apache.log4j.rolling.TimeBasedRollingPolicy
-log4j.appender.FILE.rollingPolicy.ActiveFileName=D:\\logging.log
-log4j.appender.FILE.rollingPolicy.FileNamePattern=D:\\logging-.%d{yyyyMMdd-HHmm}.log.gz
+log4j.appender.FILE.File=../logging.log
 log4j.appender.FILE.maxFileSize=20MB
 # Set the immediate flush to true (default)
 log4j.appender.FILE.ImmediateFlush=true
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.FILE.layout.ConversionPattern=%-4r [%t] %-5p %c %x: %L - %m%n
+log4j.appender.FILE.layout.ConversionPattern=%d [%t] %-5p %c %x: %L - %m%n
