--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,5 +1,6 @@
 # Set root logger level to DEBUG and its only appender to A1.
 log4j.rootLogger=DEBUG, console, FILE
+log4j.logger.com.github.sarxos.webcam=warn
 
 # A1 is set to be a ConsoleAppender.
 log4j.appender.console=org.apache.log4j.ConsoleAppender
@@ -10,7 +11,7 @@ log4j.appender.console.layout.ConversionPattern=%d [%t] %-5p %c %x: %L - %m%n
 
 # log to file
 log4j.appender.FILE=org.apache.log4j.RollingFileAppender
-log4j.appender.FILE.File=../logging.log
+log4j.appender.FILE.File=logging.log
 log4j.appender.FILE.maxFileSize=20MB
 # Set the immediate flush to true (default)
 log4j.appender.FILE.ImmediateFlush=true
