--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,12 @@
 		<tag>HEAD</tag>
 		<url>http://127.0.0.1/dummy</url>
 	</scm>
+	
+	<properties>
+		<junit.version>4.12</junit.version>
+		<mockito.version>2.10.0</mockito.version>
+		<hamcrest.version>1.3</hamcrest.version>
+	</properties>
 
 	<build>
 		<resources>
@@ -334,6 +340,27 @@
 			<version>2.0.0</version>
 		</dependency>
 
+		<!-- Testing -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>${mockito.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-library</artifactId>
+			<version>${hamcrest.version}</version>
+			<scope>test</scope>
+		</dependency>
 
 		<!-- old local mzmine <dependency> <groupId>net.sf.mzmine</groupId> <artifactId>MZmine</artifactId> 
 			<version>2.13</version> </dependency> -->
