--- a/pom.xml
+++ b/pom.xml
@@ -166,8 +166,8 @@
 		<!-- moved jimzML to private repository -->
 		<dependency>
 			<groupId>io.github.mzmine</groupId>
-			<artifactId>mzmine</artifactId>
-			<version>2.21</version>
+			<artifactId>mzmine2</artifactId>
+			<version>2.33</version>
 			<scope>compile</scope>
 			<exclusions>
 				<exclusion>
