--- a/buildNumber.properties
+++ b/buildNumber.properties
@@ -1,7 +1,6 @@
 #maven.buildNumber.plugin properties file
-<<<<<<< HEAD
-#Mon Jul 02 17:06:18 CEST 2018
-=======
-#Thu Jul 05 10:27:21 CEST 2018
->>>>>>> refs/heads/import_icap_tofr
-buildNumber=52
+#Thu Jul 05 17:17:40 CEST 2018
+buildNumber=54
+>>>>>>>=refs/heads/import_icap_tofr
+<<<<<<<=HEAD
+=\=\=\=\=\=\=
