--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ semver {
 
 // version is now in version.properties
 group = "net.rs.lamsi"
-description = "ImaJar"
+description = "Imajar"
 
 java {
     sourceCompatibility = "19"
@@ -80,7 +80,7 @@ ext {
 }
 
 dependencies {
-    // ImaJar version parsing
+    // Imajar version parsing
     implementation 'com.vdurmont:semver4j:3.1.0'
 //    implementation "org.graphstream:gs-core:2.0"
     // use patched version via jitpack from https://github.com/robinschmid/gs-core/tree/patch-1
@@ -239,7 +239,7 @@ tasks.withType(JavaExec) {
  */
 application {
     mainClass.set("net.rs.lamsi.multiimager.Frames.ImageEditorWindow")
-    applicationName = "ImaJar"
+    applicationName = "Imajar"
 }
 
 /*
@@ -271,13 +271,13 @@ runtime {
         if (OperatingSystem.current().isWindows()) {
             // The WiX toolset must be installed, see https://wixtoolset.org/releases/
             installerType = "msi"
-            installerName = "ImaJar_Windows_installer"
+            installerName = "Imajar_Windows_installer"
             // additional options for jpackage
-            imageOptions = ["--icon", "src/main/resources/ImaJarIcon.ico",
-                            "--add-launcher", "ImaJar_console=gradle/win_console_launcher.properties"
+            imageOptions = ["--icon", "src/main/resources/ImajarIcon.ico",
+                            "--add-launcher", "Imajar_console=gradle/win_console_launcher.properties"
             ]
             installerOptions = ["--win-menu",
-                                "--win-menu-group", "ImaJar",
+                                "--win-menu-group", "Imajar",
                                 "--win-shortcut",
                                 "--win-dir-chooser",
                                 "--win-upgrade-uuid", "$win_uuid",
@@ -287,24 +287,24 @@ runtime {
         if (OperatingSystem.current().isMacOsX()) {
             installerType = "dmg"
             // additional options for jpackage
-            imageOptions = ["--icon", "src/main/resources/ImaJarIcon.icns"]
+            imageOptions = ["--icon", "src/main/resources/ImajarIcon.icns"]
             installerOptions = ["--license-file", "LICENSE.txt"]
-            installerName = "ImaJar_macOS_installer"
+            installerName = "Imajar_macOS_installer"
         }
         if (OperatingSystem.current().isLinux()) {
             // leave installer type empty to generate all that match
             // for rpm, rpmbuild and rpm tools need to be installed, installerType needs to be set to "rpm"
             // installerType = "deb"
             // additional options for jpackage
-            imageOptions = ["--icon", "src/main/resources/ImaJarIcon.png"]
+            imageOptions = ["--icon", "src/main/resources/ImajarIcon.png"]
             installerOptions = ["--linux-shortcut",
-                                "--linux-menu-group", "ImaJar",
+                                "--linux-menu-group", "Imajar",
                                 "--license-file", "LICENSE.txt",
                                 "--linux-deb-maintainer", "plusik@gmail.com"]
 
-            installerName = "ImaJar_Linux_installer"
+            installerName = "Imajar_Linux_installer"
         }
-        imageName = "ImaJar"
+        imageName = "Imajar"
         jvmArgs = ["-showversion",
                    "-XX:MaxHeapFreeRatio=100",
                    "-XX:InitialRAMPercentage=30",
